--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 9092
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/testa_sdb
+    url: jdbc:mysql://192.168.1.150:3306/testa_sdb
     username: testa
     password: admin123
     driver-class-name: com.mysql.cj.jdbc.Driver
